--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "umd",
+    "target": "es5",
+    "module": "commonjs",
     "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true,
