--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rac",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "reprua api component",
   "main": "dist/index.js",
   "author": "YutoTani",
@@ -19,7 +19,7 @@
     "@types/react": "^16.9.49",
     "lodash.snakecase": "^4.1.1",
     "qs": "^6.9.4",
-    "react": "16.13.0",
-    "typescript": "^4.0.3"
+    "react": "^17.0",
+    "typescript": "^4.0"
   }
 }
